--- a/server/Makefile
+++ b/server/Makefile
@@ -18,7 +18,7 @@ HOST_SYSTEM = $(shell uname | cut -f 1 -d_)
 SYSTEM ?= $(HOST_SYSTEM)
 CXX = g++
 CPPFLAGS += `pkg-config --cflags protobuf grpc`
-CXXFLAGS += -std=c++11
+CXXFLAGS += -std=c++14
 ifeq ($(SYSTEM),Darwin)
 LDFLAGS += -L/usr/local/lib `pkg-config --libs protobuf grpc++`\
            -pthread\
@@ -34,28 +34,27 @@ PROTOC = protoc
 GRPC_CPP_PLUGIN = grpc_cpp_plugin
 GRPC_CPP_PLUGIN_PATH ?= `which $(GRPC_CPP_PLUGIN)`
 
-PROTOS_PATH = .
+BUILD_PATH = build
+
+PROTOS_PATH = ../common
 
 vpath %.proto $(PROTOS_PATH)
 
-all: system-check VectorServiceImpl VectorClient
+all: system-check VectorServiceImpl
 
 VectorServiceImpl: greeter.pb.o greeter.grpc.pb.o VectorServiceImpl.o
 	$(CXX) $^ $(LDFLAGS) -o $@
 
-VectorClient: greeter.pb.o greeter.grpc.pb.o VectorClient.o
-	$(CXX) $^ $(LDFLAGS) -o $@
-
-.PRECIOUS: %.grpc.pb.cc
+.PRECIOUS: $(BUILD_PATH)/%.grpc.pb.cc
 %.grpc.pb.cc: %.proto
-	$(PROTOC) -I $(PROTOS_PATH) --grpc_out=. --plugin=protoc-gen-grpc=$(GRPC_CPP_PLUGIN_PATH) $<
+	$(PROTOC) -I $(PROTOS_PATH) --grpc_out=$(BUILD_PATH) --plugin=protoc-gen-grpc=$(GRPC_CPP_PLUGIN_PATH) $<
 
-.PRECIOUS: %.pb.cc
+.PRECIOUS: $(BUILD_PATH)/%.pb.cc
 %.pb.cc: %.proto
-	$(PROTOC) -I $(PROTOS_PATH) --cpp_out=. $<
+	$(PROTOC) -I $(PROTOS_PATH) --cpp_out=$(BUILD_PATH) $<
 
 clean:
-	rm -f *.o *.pb.cc *.pb.h VectorServiceImpl VectorClient
+	rm -f *.o *.pb.cc *.pb.h VectorServiceImpl
 
 
 # The following is to test your system and ensure a smoother experience.
